# k2dg

./: CHANGELOG.md  LICENSE  README.md  env.yml  pyproject.toml
.github/workflows/: CI.yaml
k2dg/: __init__.py  __main__.py  _cli.py  _parse.py  _print.py  conversion.py
tests/: test_cli.py  test_conversion.py  test_parse.py  test_print.py
