[project]
name = "k2dg"
version = "0.1.0"
description = "A simple command line app to interconvert dissociation constants and free energies of binding."
authors = [{name = "Finlay Clark"}]
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = ["numpy", "scipy", "pint", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
k2dg = "k2dg.__main__:main"

